update libgdiplus library version from 5.6.1 to 6.1,  add Win32 target build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,21 +12,24 @@ set(APP_NAME krkr2)
 
 project(${APP_NAME})
 
-if(NOT ANDROID)
-    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-endif()
-
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 set(KRKR2CORE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cpp/core)
 set(KRKR2PLUGIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cpp/plugins)
-
+if(MSVC)
+    add_link_options("/ignore:4099")
+    # set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif()
 if(ANDROID)
     add_library(${PROJECT_NAME} SHARED ${CMAKE_CURRENT_SOURCE_DIR}/android/cpp/krkr2_android.cpp)
 elseif(LINUX)
     add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/linux/main.cpp)
+elseif(WINDOWS)
+    add_executable(${PROJECT_NAME} 
+        ${CMAKE_CURRENT_SOURCE_DIR}/windows/main.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/windows/game.rc)
 endif()
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${KRKR2CORE_PATH}/environ/cocos2d)
@@ -52,6 +55,7 @@ if(NOT ANDROID)
     setup_cocos_app_config(${APP_NAME})
 
     if(WINDOWS)
+        target_sources(${PROJECT_NAME} PRIVATE ${common_res_files})
         cocos_copy_target_dll(${APP_NAME})
     endif()
 
@@ -59,4 +63,9 @@ if(NOT ANDROID)
         cocos_get_resource_path(APP_RES_DIR ${APP_NAME})
         cocos_copy_target_res(${APP_NAME} LINK_TO ${APP_RES_DIR} FOLDERS ${GAME_RES_FOLDER})
     endif()
+endif()
+
+if(MSVC)
+  target_compile_options(${PROJECT_NAME} PUBLIC "/ZI")
+  target_link_options(${PROJECT_NAME} PUBLIC "/INCREMENTAL")
 endif()
