--- a/vcpkg/ports/ffmpeg/FindFFMPEG.cmake.in
+++ b/vcpkg/ports/ffmpeg/FindFFMPEG.cmake.in
@@ -55,8 +55,8 @@ function(append_dependencies out)
     endif()
     set(pass_through
         ${CMAKE_CXX_IMPLICIT_LINK_LIBRARIES}
-        bcrypt gdi32 mfuuid ole32 oleaut32 psapi secur32 shlwapi strmiids user32 uuid vfw32 ws2_32
-        -pthread -pthreads pthread atomic m
+        bcrypt gdi32 mfuuid ole32 oleaut32 psapi secur32 shlwapi strmiids advapi32 shell32 user32 uuid vfw32 ws2_32
+        -pthread -pthreads pthread atomic m 
     )
     cmake_policy(SET CMP0057 NEW)
     foreach(lib_name IN LISTS arg_NAMES)
