--- a/vcpkg/ports/cocos2dx/cocos2dx-config.cmake.in
+++ b/vcpkg/ports/cocos2dx/cocos2dx-config.cmake.in
@@ -1,5 +1,13 @@
 @PACKAGE_INIT@
 
+# Compute the installation prefix relative to this file.
+get_filename_component(_IMPORT_PREFIX "${CMAKE_CURRENT_LIST_FILE}" PATH)
+get_filename_component(_IMPORT_PREFIX "${_IMPORT_PREFIX}" PATH)
+get_filename_component(_IMPORT_PREFIX "${_IMPORT_PREFIX}" PATH)
+if(_IMPORT_PREFIX STREQUAL "/")
+  set(_IMPORT_PREFIX "")
+endif()
+
 if(@IOS@)
     set(platform_name ios)
     set(platform_spec_path ios)
@@ -224,11 +232,11 @@ if(@LINUX@)
         INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/linux-specific/fmod/include"
         IMPORTED_LOCATION "${CMAKE_CURRENT_LIST_DIR}/linux-specific/fmod/prebuilt/64-bit/libfmod.so"
     )
-
     find_package(Fontconfig REQUIRED)
-
-    find_package(PkgConfig REQUIRED)
-    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+    find_package(TIFF REQUIRED)
+    find_package(Freetype REQUIRED)
+    find_package(BZip2 REQUIRED)
+    find_package(PNG REQUIRED)
 
     find_package(GLEW REQUIRED)
     find_package(OpenGL REQUIRED)
