--- a/cpp/plugins/psbfile/CMakeLists.txt
+++ b/cpp/plugins/psbfile/CMakeLists.txt
@@ -5,6 +5,9 @@ add_library(${PROJECT_NAME} STATIC)
 
 target_sources(${PROJECT_NAME} PUBLIC
     main.cpp
+    PSBValue.cpp
+    PSBFile.cpp
+    types/PimgType.cpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin)
