--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Build Windows
         run: |
-          cmake --preset="Windows Debug Config" -D CMAKE_C_COMPILER_LAUNCHER=ccache.exe -D CMAKE_CXX_COMPILER_LAUNCHER=ccache.exe
+          cmake --preset="Windows Debug Config"
           cmake --build --preset="Windows Debug Build"
 
       - name: Upload artifacts
