--- a/cpp/plugins/fstat/CMakeLists.txt
+++ b/cpp/plugins/fstat/CMakeLists.txt
@@ -5,7 +5,8 @@ project(fstat)
 add_library(${PROJECT_NAME} STATIC)
 
 target_sources(${PROJECT_NAME} PUBLIC
-    fstat.cpp
+    fstatPlugin.cpp
 )
+
 
 target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin)
