--- a/cpp/plugins/json/CMakeLists.txt
+++ b/cpp/plugins/json/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.19)
 project(json)
 add_library(${PROJECT_NAME} STATIC)
 target_sources(${PROJECT_NAME} PUBLIC
-    json.cpp
+    jsonPlugin.cpp
 )
 target_link_libraries(${PROJECT_NAME} PRIVATE krkr2plugin)
