--- a/cpp/plugins/CMakeLists.txt
+++ b/cpp/plugins/CMakeLists.txt
@@ -48,7 +48,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 
 add_definitions(-D__STDC_CONSTANT_MACROS -DTJS_TEXT_OUT_CRLF)
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${KRKR2PLUGIN_PATH} ${KRKR2PLUGIN_PATH}/ncbind)
+target_include_directories(${PROJECT_NAME} PUBLIC ${KRKR2PLUGIN_PATH} ${KRKR2PLUGIN_PATH}/ncbind ${KRKR2PLUGIN_PATH}/simplebinder})
 target_link_libraries(${PROJECT_NAME} PUBLIC krkr2core)
 
 add_subdirectory(psdfile)
@@ -57,10 +57,11 @@ add_subdirectory(layerex_draw)
 if(ANDROID)
     add_subdirectory(json)
     add_subdirectory(fstat)
+    add_subdirectory(steam)
 endif ()
     target_link_libraries(${PROJECT_NAME} PUBLIC psdfile psbfile layerExDraw)
 if (ANDROID)
-    target_link_libraries(${PROJECT_NAME} PUBLIC fstat json)
+    target_link_libraries(${PROJECT_NAME} PUBLIC fstat json steam)
 endif ()
 
 find_package(fmt CONFIG REQUIRED)
