--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.28)
 
 find_program(CCACHE_PROGRAM ccache)
+
+add_compile_definitions(
+        $<$<CONFIG:Debug>:DEBUG>
+        $<$<CONFIG:Debug>:_DEBUG>   # 对于 MSVC 兼容性
+        $<$<NOT:$<CONFIG:Debug>>:NDEBUG>
+)
+
 if (CCACHE_PROGRAM)
     set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
     set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
