--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,8 @@ include(Catch)
 
 set(TEST_CONFIG_DIR "${CMAKE_CURRENT_BINARY_DIR}")
 
+add_subdirectory(unit-tests/core/visual)
+
 add_subdirectory(unit-tests/plugins)
 
 set(TEST_FILES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/test_files)
