add tjs2-disassemble.cpp test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ include(Catch)
 set(TEST_CONFIG_DIR "${CMAKE_CURRENT_BINARY_DIR}")
 
 add_subdirectory(unit-tests/core/visual)
+add_subdirectory(unit-tests/core/tjs2)
 
 add_subdirectory(unit-tests/plugins)
 
