unit test read psbfile ezsave.pimg

--- a/cpp/plugins/CMakeLists.txt
+++ b/cpp/plugins/CMakeLists.txt
@@ -55,16 +55,16 @@ add_subdirectory(psdfile)
 add_subdirectory(psbfile)
 add_subdirectory(layerex_draw)
 
-add_subdirectory(json)
-add_subdirectory(fstat)
-add_subdirectory(steam)
-add_subdirectory(DrawDeviceForSteam)
+#add_subdirectory(json)
+#add_subdirectory(fstat)
+#add_subdirectory(steam)
+#add_subdirectory(DrawDeviceForSteam)
 # add_subdirectory(KAGParserEx)
 target_link_libraries(${PROJECT_NAME} PUBLIC psdfile psbfile layerExDraw)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC fstat json steam DrawDeviceForSteam
-#         KAGParserEx
-)
+#target_link_libraries(${PROJECT_NAME} PUBLIC fstat json steam DrawDeviceForSteam
+##         KAGParserEx
+#)
 
 
 find_package(fmt CONFIG REQUIRED)
