--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # build target
-cmake-build-android/
-cmake-build-android-release/
-cmake-build-android-debug/
-build/
-out/
+/**/cmake-build-android/
+/**/cmake-build-android-release/
+/**/cmake-build-android-debug/
+/**/build/
+/**/out/
+/**/bin/
 
 .idea/
 .vscode/
