--- a/cpp/core/base/CMakeLists.txt
+++ b/cpp/core/base/CMakeLists.txt
@@ -43,6 +43,7 @@ find_package(unrar CONFIG REQUIRED)
 find_package(LibArchive REQUIRED)
 find_package(SDL2 CONFIG REQUIRED)
 find_package(zstd CONFIG REQUIRED)
+find_package(cocos2dx CONFIG REQUIRED)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
     uchardet::libuchardet
@@ -52,4 +53,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 
     $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
     $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
+    cocos2dx::cocos2d
 )
