--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,17 @@ cmake_minimum_required(VERSION 3.28)
 
 find_program(CCACHE_PROGRAM ccache)
 
+if (CCACHE_PROGRAM)
+    set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
+    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
+    message(STATUS "Ccache found: ${CCACHE_PROGRAM}")
+endif ()
+
 add_compile_definitions(
         $<$<CONFIG:Debug>:DEBUG>
         $<$<CONFIG:Debug>:_DEBUG>   # 对于 MSVC 兼容性
         $<$<NOT:$<CONFIG:Debug>>:NDEBUG>
 )
-
-if (CCACHE_PROGRAM)
-    set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
-    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
-    message(STATUS "Ccache found: ${CCACHE_PROGRAM}")
-else ()
-    message(STATUS "Ccache not found")
-endif ()
 
 if(ANDROID)
     set(VCPKG_TARGET_ANDROID ON)
@@ -39,8 +37,8 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(KRKR2CORE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cpp/core)
 set(KRKR2PLUGIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cpp/plugins)
 if(MSVC)
-    add_compile_options("$<$<COMPILE_LANGUAGE:CXX>:/EHsc>")
-    add_link_options("/ignore:4099")
+    add_compile_options("$<$<COMPILE_LANGUAGE:CXX>:/EHsc>" "/utf-8")
+    add_link_options("/ignore:4099" "/MP" "/INCREMENTAL" "/DEBUG:FASTLINK")
     # set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
 if(ANDROID)
@@ -148,11 +146,6 @@ if(NOT ANDROID)
         cocos_get_resource_path(APP_RES_DIR ${APP_NAME})
         cocos_copy_target_res(${APP_NAME} LINK_TO ${APP_RES_DIR} FOLDERS ${GAME_RES_FOLDER})
     endif()
-endif()
-
-if(MSVC)
-  target_compile_options(${PROJECT_NAME} PUBLIC "/MP")
-  target_link_options(${PROJECT_NAME} PUBLIC "/INCREMENTAL")
 endif()
 
 if(ENABLE_TESTS AND NOT (IOS OR ANDROID))
