--- a/cpp/core/CMakeLists.txt
+++ b/cpp/core/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.28)
 project(krkr2core)
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/common)
+
 add_library(${PROJECT_NAME} INTERFACE)
 
 add_subdirectory(tjs2)
