--- a/cpp/core/base/CMakeLists.txt
+++ b/cpp/core/base/CMakeLists.txt
@@ -36,7 +36,7 @@ set(BASE_HEADERS_DIR
 
 add_library(${PROJECT_NAME} STATIC ${BASE_SOURCE_FILES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${BASE_HEADERS_DIR})
-target_link_libraries(${PROJECT_NAME} PRIVATE tjs2 core_visual_module core_plugin_module core_environ_module core_extension_module core_sound_module core_utils_module)
+target_link_libraries(${PROJECT_NAME} PUBLIC tjs2 PRIVATE core_visual_module core_plugin_module core_environ_module core_extension_module core_sound_module core_utils_module)
 
 find_package(uchardet CONFIG REQUIRED)
 find_package(unrar CONFIG REQUIRED)
