--- a/cpp/core/environ/CMakeLists.txt
+++ b/cpp/core/environ/CMakeLists.txt
@@ -75,7 +75,7 @@ set(ENVIRON_HEADERS_DIR
 
 add_library(${PROJECT_NAME} STATIC ${ENVIRON_SOURCE_FILES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${ENVIRON_HEADERS_DIR})
-target_link_libraries(${PROJECT_NAME} PRIVATE tjs2 core_base_module core_visual_module core_sound_module core_plugin_module core_movie_module core_utils_module)
+target_link_libraries(${PROJECT_NAME} PUBLIC tjs2 PRIVATE core_base_module core_visual_module core_sound_module core_plugin_module core_movie_module core_utils_module)
 
 find_package(cocos2dx CONFIG REQUIRED)
 find_package(7zip CONFIG REQUIRED)
