--- a/cpp/core/sound/CMakeLists.txt
+++ b/cpp/core/sound/CMakeLists.txt
@@ -35,7 +35,7 @@ set(SOUND_HEADERS_DIR
 
 add_library(${PROJECT_NAME} STATIC ${SOUND_SOURCE_FILES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${SOUND_HEADERS_DIR})
-target_link_libraries(${PROJECT_NAME} PRIVATE tjs2 core_base_module core_movie_module core_utils_module core_environ_module)
+target_link_libraries(${PROJECT_NAME} PUBLIC tjs2 PRIVATE core_base_module core_movie_module core_utils_module core_environ_module)
 
 find_package(Vorbis CONFIG REQUIRED)
 find_package(Opus CONFIG REQUIRED)
