--- a/cpp/core/visual/CMakeLists.txt
+++ b/cpp/core/visual/CMakeLists.txt
@@ -76,7 +76,7 @@ set(VISUAL_HEADERS_DIR
 
 add_library(${PROJECT_NAME} STATIC ${VISUAL_SOURCE_FILES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${VISUAL_HEADERS_DIR})
-target_link_libraries(${PROJECT_NAME} PRIVATE tjs2 core_base_module core_environ_module core_plugin_module core_sound_module core_utils_module)
+target_link_libraries(${PROJECT_NAME} PUBLIC tjs2 PRIVATE core_base_module core_environ_module core_plugin_module core_sound_module core_utils_module)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE libbpg)
 
