--- a/tools/xp3/CMakeLists.txt
+++ b/tools/xp3/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(${PROJECT_NAME}
 find_package(argparse CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE argparse::argparse)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE tjs2 core_base_module)
+target_link_libraries(${PROJECT_NAME} PUBLIC tjs2 PRIVATE core_base_module)
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     PROGRAM_NAME="${PROJECT_NAME}"
     VERSION="${PROJECT_VERSION}"
