--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -17,20 +17,28 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     env:
-      VCPKG_ROOT: ${{ github.workspace }}/.act/vcpkg
-      ANDROID_SDK_ROOT: ${{ github.workspace }}/.act/android-sdk
-      ANDROID_NDK: ${{ github.workspace }}/.act/android-ndk
+      VCPKG_ROOT: /mnt/vcpkg
+      ANDROID_SDK_ROOT: /mnt/android-sdk
+      ANDROID_NDK: /mnt/android-ndk
     steps:
       - uses: actions/checkout@v4
         with:
           lfs: true
 
-      - name: Delete huge unnecessary tools folder
+      - name: Free disk space
         run: |
-          if [ -d /opt/hostedtoolcache ]; then 
-            rm -rf /opt/hostedtoolcache
-            echo "Delete /opt/hostedtoolcache"
-          fi
+          echo "Initial disk usage:"
+          df -h
+      
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+      
+          echo "After cleanup:"
+          df -h
 
       - name: Install Mono
         run: |
@@ -95,7 +103,6 @@ jobs:
 
           echo "ANDROID_NDK=${{ env.ANDROID_NDK }}" >> $GITHUB_ENV
           echo "ANDROID_HOME=${{ env.ANDROID_SDK_ROOT }}" >> $GITHUB_ENV
-        # echo "sdk.dir=${{ env.ANDROID_SDK_ROOT }}" > "${{ github.workspace }}/local.properties"
 
       - name: Setup vcpkg
         run: |
@@ -152,7 +159,7 @@ jobs:
 
       - name: Build Android
         run: |
-          ./platforms/android/gradlew -p ./platforms/android assemble
+          ./platforms/android/gradlew -p ./platforms/android --console=plain --no-daemon assemble
 
       - name: Upload artifacts
         if: ${{ !env.ACT && success() }}
