refactor: engine_api 脱离 cocos2d GL Context，正式链接 ANGLE
- engine_api.cpp: 移除所有 cocos2d Director/GLView/EventDispatcher 依赖
- engine_api.cpp: 使用 EngineBootstrap + krkr EGL Context 替代 AppDelegate
- engine_api.cpp: 输入事件分发改为直接转发到 MainScene（Phase 3 将替换）
- engine_api.cpp: glReadPixels 路径简化为 GLES2 Pbuffer 兼容
- visual/CMakeLists.txt: 正式链接 ANGLE libEGL + libGLESv2（Phase 2 启用）
- core/CMakeLists.txt: 添加 -ld_classic 解决 ANGLE/cocos2d xxhash 符号冲突

--- a/cpp/core/CMakeLists.txt
+++ b/cpp/core/CMakeLists.txt
@@ -65,3 +65,12 @@ target_link_libraries(${PROJECT_NAME} INTERFACE
     cocos2dx::cocos2d
     $<$<BOOL:${ANDROID}>:$<LINK_LIBRARY:WHOLE_ARCHIVE,cocos2dx::cpp_android_spec>>
 )
+
+# Resolve duplicate symbol conflict between ANGLE (xxhash) and cocos2d-x (ext_xxhash).
+# Both libraries embed xxhash; on Apple platforms the new ld (ld-prime) refuses
+# duplicate symbols. Use -ld_classic to fall back to the classic linker behavior
+# that silently picks one. This workaround is temporary — when cocos2d-x is fully
+# removed in Phase 5 the conflict disappears.
+if(APPLE)
+    target_link_options(${PROJECT_NAME} INTERFACE "LINKER:-ld_classic")
+endif()
