--- a/cpp/core/visual/simd/CMakeLists.txt
+++ b/cpp/core/visual/simd/CMakeLists.txt
@@ -7,6 +7,8 @@ set(SIMD_SOURCE_FILES
     ${SIMD_PATH}/tvpgl_simd_copy.cpp
     ${SIMD_PATH}/tvpgl_simd_alpha_blend.cpp
     ${SIMD_PATH}/tvpgl_simd_arithmetic_blend.cpp
+    ${SIMD_PATH}/tvpgl_simd_const_blend.cpp
+    ${SIMD_PATH}/tvpgl_simd_premul_blend.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${SIMD_SOURCE_FILES})
