feat: 新增Photoshop SIMD混合模式实现与注册

--- a/cpp/core/visual/simd/CMakeLists.txt
+++ b/cpp/core/visual/simd/CMakeLists.txt
@@ -9,6 +9,8 @@ set(SIMD_SOURCE_FILES
     ${SIMD_PATH}/tvpgl_simd_arithmetic_blend.cpp
     ${SIMD_PATH}/tvpgl_simd_const_blend.cpp
     ${SIMD_PATH}/tvpgl_simd_premul_blend.cpp
+    ${SIMD_PATH}/tvpgl_simd_ps_blend.cpp
+    ${SIMD_PATH}/tvpgl_simd_ps_blend2.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${SIMD_SOURCE_FILES})
